fixed width problems and additional spacing for components

--- a/king pinto/client/src/index.css
+++ b/king pinto/client/src/index.css
@@ -6,8 +6,8 @@
   
 
   color-scheme: light dark;
-  color: black;
-  background-color: white;
+  color: white;
+  background-color: #28282B;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
